schema/testdata/validation_reserved_action_name_authenticate/schema.keel
model User {
    fields {
        email Text
    }

    operations {
        create authenticate() with (email)
    }
}

api Web {
    @graphql

    models {
        User
    }
}
