schema/testdata/errors/reserved_action_name_authenticate.keel
model User {
    fields {
        email Text
    }

    actions {
        //expect-error:16:28:E042:You have a reserved action name 'authenticate'
        create authenticate() with (email)
    }
}

api Web {
    models {
        User
    }
}
